--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,8 +3,10 @@ site_url: https://tunayan.github.io
 theme: gitbook
 nav:
   - Home: index.md
-  - test1
-  - sect/test2
+  - test1: test1
+  - test2: 
+    - sect/test2
+    - sect/test3
 
 extra:
   nav:
